misc: add hideImages testing code (stable), nonfunctional tick boxes

--- a/manifest.json
+++ b/manifest.json
@@ -25,6 +25,9 @@
             ],
             "js": [
                 "content.js"
+            ],
+            "css": [
+                "styles.css"
             ]
         }
     ],
