--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,11 @@
 {
     "manifest_version": 3,
-    "name": "mydealz enhanced",
-    "description": "Remove visual clutter and unnecessary information from mydealz.",
+    "name": "mydealz_enhanced",
+    "description": "Filtere Deals basierend auf Stichwörtern, verstecke Dealbilder, Dealtextvorschau uvm.",
     "background": {
         "service_worker": "background.js"
     },
-    "version": "0.9",
+    "version": "0.91",
     "icons": {
         "16": "images/icon-16.png",
         "32": "images/icon-32.png",
@@ -33,7 +33,7 @@
         }
     ],
     "action": {
-        "default_title": "Click to open options",
+        "default_title": "mydealz_enhance Optionen",
         "default_popup": "popup.html",
         "default_icon": {
             "16": "images/icon-16.png",
